horizontal scroll fix

--- a/_source/scss/_layout.scss
+++ b/_source/scss/_layout.scss
@@ -14,7 +14,7 @@ body.content-page{
 
 .content-page{
 	.main-wrap{
-
+		overflow-x: hidden; 
 		/* SFG: adding header hero content: image & copy in landing page */
 
 	.logo {	
